# renu-ncurses

./: dune  package.json
bindings/: ncurses_bindings.re
bindings-types/: dune  ncurses_constants.re
lib/: Ncurses.re  Styling.re  dune
stubgen/: dune  ncurses_constants_generator.re  ncurses_stub_generator.re
