(executable
 (name ncurses_stub_generator)
 (modules ncurses_stub_generator)
 (libraries ncurses_bindings ctypes.stubs ctypes))

(executable
 (name ncurses_constants_generator)
 (modules ncurses_constants_generator)
 (libraries ncurses_constants ctypes.stubs ctypes))


(rule
 (targets ncurses_constants_generator.c)
 (deps    (:gen ./ncurses_constants_generator.exe))
 (action  (run %{gen} %{targets})))

(rule
 (targets ncurses_constants_generator)
 (deps    (:c_code ./ncurses_constants_generator.c))
 (action  (run %{ocaml-config:c_compiler} -I %{lib:ctypes:} -I %{ocaml-config:standard_library} -o %{targets} %{c_code})))




(rule
 (targets ncurses_stubs.c ncurses_generated.ml)
 (deps ncurses_stub_generator.exe)
 (action
  (run %{deps})))

(library
 (name ncurses_generated)
 (modules ncurses_generated)
 (c_library_flags -lncurses)
 (foreign_stubs
  (language c)
  (names ncurses_stubs))
 (libraries ctypes.stubs))
